# sommelier-netflix-ai-sdd

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements-mcp.txt  requirements.txt
.claude/: settings.local.json
.sdd/specs/netflix-content-recommender/: design.md  requirements.md  research.md  spec.json  tasks.md
src/sommelier/: __init__.py  __main__.py  debug.py  main.py  mcp_server.py
src/sommelier/application/: conversation_orchestrator.py  recommendation_engine.py  response_generator.py  session_manager.py
src/sommelier/domain/: candidate_retriever.py  models.py  preference_extractor.py
src/sommelier/infrastructure/: claude_adapter.py  dataset_store.py  neon_dataset_store.py
src/sommelier/interface/: cli_adapter.py
src/sommelier/ports/: interfaces.py
tests/: conftest.py  fixtures.py  test_candidate_retriever.py  test_claude_adapter.py  test_claude_adapter_observability.py  test_cli_adapter.py  test_conversation_orchestrator.py  test_dataset_store_filter.py  test_dataset_store_load.py  test_dataset_store_tfidf.py  test_domain_models.py  test_integration_feedback.py  test_integration_recommendation.py  test_performance.py  test_ports.py  test_preference_extractor.py  test_project_setup.py  test_recommendation_engine.py  test_response_generator.py  test_session_manager.py  test_smoke.py  test_wiring.py
